fix inner border radius, fix bg color dark mode in  number error state

--- a/src/styles/_input.sass
+++ b/src/styles/_input.sass
@@ -108,10 +108,15 @@
 		@apply border-state_error_fg_light dark:border-state_error_fg_dark
 		@apply bg-surface_tertiary_light dark:bg-surface_tertiary_dark #{!important}
 		&:hover
+			@apply border-state_error_fg_light dark:border-state_error_fg_dark #{!important}
 			@apply bg-surface_quatenary_light dark:bg-surface_quatenary_dark #{!important}
 		&:focus-within
 			box-shadow: none !important
 			@apply bg-surface_primary_light dark:bg-surface_primary_dark #{!important}
+			@apply border-action_primary_active_light dark:border-action_primary_active_dark #{!important}
+	.ant-input-affix-wrapper
+		.ant-input
+			border-radius: 0px !important
 
 .ant-form-item-label
     > label
